MultiStep-Form Created For Project

--- a/DreamHome-Project/index.html
+++ b/DreamHome-Project/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Realtor Nine, a premium real estate marketing company in the heart of Dubai</title>
+    <meta description="Realtor Nine, a premium real estate marketing company in the heart of Dubai to let you experience the best side of real estate in Dubai"/>
+    <link href="./public/realtor.svg" type="images/x-icon" rel="shortcut icon">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
